tests/errors/phpdoc_trim_consecutive_blank_line_separation.php
<?php

declare(strict_types=1);

/**
 * Hello you
 *
 *
 * @param int $a
 * @param int $b
 */
function hello($a, $b): void
{
}
